--- a/assets/css/inicio.css
+++ b/assets/css/inicio.css
@@ -10,8 +10,7 @@ body{
 h1{
     font-size: 40px;
 }
-#map{
-    width:400px;
-    height:400px;
-    background:yellow
+.form-group{
+    width: 450px; 
+    height: 350px;
 }
